<resources>
    <string name="app_name">Admin</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_users">Users</string>
    <string name="menu_product">Product</string>
    <string name="menu_dashboard">DashBoard</string>
    <string name="menu_review">Reviews</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_adbanner">Your Ads</string>
    <string name="add_product">Add Product</string>
    <string name="update_product">Update Product</string>
    <string name="view_product">View Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="update_product_details">Update Product Details</string>
    <string name="Upload">Upload</string>
    <string name="Reports">Reports</string>
    <string name="Manage_Product">Manage Product</string>

    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_description">Product Description</string>


    <string name="createadinstruction">Upload your ad to show users on Home Screen of the Application</string>

</resources>
