<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_none"
            android:title=""
            android:visible="false" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_users"
            android:title="@string/menu_users" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_product"
            android:title="@string/add_product" />
        <item
            android:id="@+id/nav_manage_product"
            android:icon="@drawable/ic_product"
            android:title="@string/Manage_Product" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_tools"
            android:title="@string/menu_tools" />
    </group>

</menu>
